--- a/index.html
+++ b/index.html
@@ -27,27 +27,37 @@
     <main>
         <section class="bio">
             <h2 class="bio-greeting">Hi! I'm Tom.</h2>
-            <p>I'm a frontend developer who loves to create accesible, responsive products.</p>
+            <p>I'm a frontend developer who loves to create accesible, responsive products using the following tools:</p>
             <div class="tech-icon-container">
                 <figure class="tech-icon">
-                    <img src="./imgs/tech_icons/html_logo.6aa56206be02cf6404844871df1d2da6.png" />
-                    <figcaption></figcaption>
+                    <div class="tech-icon-wrapper">
+                        <img src="./imgs/tech_icons/html_logo.6aa56206be02cf6404844871df1d2da6.png" />
+                    </div>
+                    <figcaption class="tech-icon-info"><p>Semantic HTML</p></figcaption>
                 </figure>
                 <figure class="tech-icon">
-                    <img src="./imgs/tech_icons/css_logo.svg" />
-                    <figcaption></figcaption>
+                    <div class="tech-icon-wrapper">
+                        <img src="./imgs/tech_icons/css_logo.svg" />
+                    </div>
+                    <figcaption class="tech-icon-info"><p>Responsive CSS</p></figcaption>
                 </figure>
                 <figure class="tech-icon">
-                    <img src="./imgs/tech_icons/js_logo.f8a28e905c78dadb79434b7ceebd52a0.png" />
-                    <figcaption></figcaption>
+                    <div class="tech-icon-wrapper">
+                        <img src="./imgs/tech_icons/js_logo.f8a28e905c78dadb79434b7ceebd52a0.png" />
+                    </div>
+                    <figcaption class="tech-icon-info"><p>Vanilla JS</p></figcaption>
                 </figure>
                 <figure class="tech-icon">
-                    <img src="./imgs/tech_icons/react_logo.cb15bfce2a9004ce61c5f79f805b067b.png" />
-                    <figcaption></figcaption>
+                    <div class="tech-icon-wrapper">
+                        <img src="./imgs/tech_icons/react_logo.cb15bfce2a9004ce61c5f79f805b067b.png" />
+                    </div>
+                    <figcaption class="tech-icon-info"><p>React</p></figcaption>
                 </figure>
                 <figure class="tech-icon">
-                    <img src="./imgs/tech_icons/git_logo.3092b5991e8accb9e7c36817c048a8d5.png" />
-                    <figcaption></figcaption>
+                    <div class="tech-icon-wrapper">
+                        <img src="./imgs/tech_icons/git_logo.3092b5991e8accb9e7c36817c048a8d5.png" />
+                    </div>
+                    <figcaption class="tech-icon-info"><p>Git</p></figcaption>
                 </figure>
             </div>
         </section>
@@ -80,7 +90,7 @@
                 </a>
                 <figcaption class="project-info">
                     <h2>Leaving Card</h2>
-                    <p>Responsive grid gallery</p>
+                    <p>Responsive CSS grid gallery</p>
                 </figcaption>
             </figure>
         </div>
