alt tags for icons

--- a/education.html
+++ b/education.html
@@ -13,9 +13,12 @@
     <header>
         <button class="nav__toggle"><i class="fas fa-bars"></i></button>
         <nav>
-            <ul class="links">
+            <div class="title-container">
+                <h1><a href="./index.html">Tom Forman-Kenrick</a></h1>
+            </div>
+            <ul class="nav-links">
             <li class="nav__link"><a href="./index.html#projects">Projects</a></li>
-            <li class="nav__link"><a href="./education.html">Education</a></li>
+            <li class="nav__link"><a href="./education.html">Music Education</a></li>
             <li class="nav__link"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -23,9 +26,9 @@
     <!-- education intro text -->
     
     <main class="testimonials__main">
-        <h1>Education</h1>
+        <h1>Online Music Education</h1>
 <section class="testimonials__blurb">
-    <p>I love talking about music almost as much as I enjoy playing it, and I'm passionate about giving people the tools they need to be musically independent.</p><p> Since 2015 I've been running <a href="https://freebasstranscriptions.com/" target="_blank">Free Bass Transcriptions</a>, which offers free sheet music and lessons for bass players, along with an accompanying YouTube channel:</p> 
+    <p>I've been inexplicably obsessed with the bass guitar for past 25 years, and I love talking about music almost as much as I enjoy playing it. I'm passionate about giving people the tools they need to be musically independent.</p><p> Since 2015 I've been running <a href="https://freebasstranscriptions.com/" target="_blank">Free Bass Transcriptions</a>, which offers free sheet music and lessons for bass players, along with an accompanying YouTube channel:</p> 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/PKVqLOUyDIw?si=iamMTQLUQ-G15-GY&amp;controls=0&amp;start=319" title="15-minute bass guitar triad workout" scrolling="auto" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <p>One of the upshots of the COVID-19 pandemic was that it forced me to start teaching online, which has allowed me to help people all over the world get closer to their musical goals. Take a look below to see feedback from some of my students:</p>
     </section>
@@ -78,9 +81,9 @@
                 </a>
             </li>
             <li>
-                <a href="https://discordapp.com/users/t.f_k" target="_blank">
-                    <span class="fa-brands fa-discord" aria-hidden="true"></span>
-                    <span class="sr-only">Discord</span>
+                <a href="mailto:tom.kenrick@gmail.com" target="_blank">
+                    <span class="fa-regular fa-envelope" aria-hidden="true"></span>
+                    <span class="sr-only">Email me</span>
                 </a>
             </li>
             <li>
