--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button class="nav__toggle"><i class="fas fa-bars"></i></button>
         <nav>
             <div class="title-container">
-                <h1>Tom Forman-Kenrick</h1>
+                <h1><a href="./index.html">Tom Forman-Kenrick</a></h1>
             </div>
             <ul class="nav-links">
             <li class="nav__link"><a href="#projects">Projects</a></li>
@@ -26,36 +26,36 @@
     <!-- hero main section -->
     <main>
         <section class="bio">
-            <h2 class="bio-greeting">Hi! I'm Tom.</h2>
+            <h2 class="bio-greeting">Hi! I'm <span>Tom</span>.</h2>
             <p>I'm a frontend developer who loves to create accesible, responsive products using the following tools:</p>
             <div class="tech-icon-container">
                 <figure class="tech-icon">
                     <div class="tech-icon-wrapper">
-                        <img src="./imgs/tech_icons/html_logo.6aa56206be02cf6404844871df1d2da6.png" />
+                        <img src="./imgs/tech_icons/html_logo.6aa56206be02cf6404844871df1d2da6.png" alt="html 5 logo"/>
                     </div>
                     <figcaption class="tech-icon-info"><p>Semantic HTML</p></figcaption>
                 </figure>
                 <figure class="tech-icon">
                     <div class="tech-icon-wrapper">
-                        <img src="./imgs/tech_icons/css_logo.svg" />
+                        <img src="./imgs/tech_icons/css_logo.svg" alt="CSS logo"/>
                     </div>
                     <figcaption class="tech-icon-info"><p>Responsive CSS</p></figcaption>
                 </figure>
                 <figure class="tech-icon">
                     <div class="tech-icon-wrapper">
-                        <img src="./imgs/tech_icons/js_logo.f8a28e905c78dadb79434b7ceebd52a0.png" />
+                        <img src="./imgs/tech_icons/js_logo.f8a28e905c78dadb79434b7ceebd52a0.png" alt="JavaScript logo"/>
                     </div>
                     <figcaption class="tech-icon-info"><p>Vanilla JS</p></figcaption>
                 </figure>
                 <figure class="tech-icon">
                     <div class="tech-icon-wrapper">
-                        <img src="./imgs/tech_icons/react_logo.cb15bfce2a9004ce61c5f79f805b067b.png" />
+                        <img src="./imgs/tech_icons/react_logo.cb15bfce2a9004ce61c5f79f805b067b.png" alt="React logo"/>
                     </div>
                     <figcaption class="tech-icon-info"><p>React</p></figcaption>
                 </figure>
                 <figure class="tech-icon">
                     <div class="tech-icon-wrapper">
-                        <img src="./imgs/tech_icons/git_logo.3092b5991e8accb9e7c36817c048a8d5.png" />
+                        <img src="./imgs/tech_icons/git_logo.3092b5991e8accb9e7c36817c048a8d5.png" alt="git logo"/>
                     </div>
                     <figcaption class="tech-icon-info"><p>Git</p></figcaption>
                 </figure>
@@ -114,9 +114,9 @@
                 </a>
             </li>
             <li>
-                <a href="https://discordapp.com/users/t.f_k" target="_blank">
-                    <span class="fa-brands fa-discord" aria-hidden="true"></span>
-                    <span class="sr-only">Discord</span>
+                <a href="mailto:tom.kenrick@gmail.com" target="_blank">
+                    <span class="fa-regular fa-envelope" aria-hidden="true"></span>
+                    <span class="sr-only">Email me</span>
                 </a>
             </li>
             <li>
